--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </nav>
 
 
-  <h1 class="text-primary text-center">BIRDS</h1>
+  <h1 class="text-primary text-center">𝙱𝙸𝚁𝙳𝚂</h1>
 
   <div class="container-fluid">
     <div class="row text-black mt-4">
@@ -76,8 +76,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/bird2.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+          <h5 class="card-title text-danger">Greater Coucal</h5>
+          <p class="card-text">The bird in the image is a Greater Coucal (Centropus sinensis), also known as the Crow Pheasant.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
@@ -86,8 +86,9 @@
       <div class="card h-100" style="width: 18rem;">
         <img src="img/bird3.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+          
+          <h5 class="card-title text-danger">Zebra Finch</h5><br>
+          <p class="card-text">The bird in the image is a Zebra Finch (Taeniopygia guttata).Family: Estrildidae (estrildid finches)</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
@@ -96,8 +97,8 @@
       <div class="card" style="width: 18rem;">
         <img src="img/bird4.jpg" class="card-img-top h-100" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+          <h5 class="card-title text-danger">House Finch</h5>
+          <p class="card-text">The House Finch (Haemorhous mexicanus) is a small passerine bird native to North America. </p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
@@ -106,8 +107,8 @@
       <div class="card h-100" style="width: 18rem;">
         <img src="img/bird5.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+          <h5 class="card-title text-danger">Dunnock</h5><br>
+          <p class="card-text">The Dunnock (Prunella modularis), often called the "Hedge Sparrow" (though it's not a sparrow)</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
@@ -160,6 +161,29 @@
       <br>
     </div>
   </div>
+</div>
+
+
+<div id="carouselExample " class="carousel slide m-5 h-50 ">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/little.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/little2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/little3.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 
 </body>
